--- a/css/styles.css
+++ b/css/styles.css
@@ -2,15 +2,37 @@
   font-family: gatwick;
   src: url(../assets/Gatwick/Gatwick-Bold.otf); }
 
+.card {
+  margin: 15px;
+  border-radius: 5%;
+  border: 2px solid #fad7da; }
+  .card img {
+    height: 40vh;
+    object-fit: cover;
+    border-radius: 100%;
+    border: 1px solid #fad7da; }
+  .card .card-title {
+    border-bottom: 1px solid grey; }
+
+.postulate {
+  margin: 20px 20% 20px 20%;
+  border: 2px solid #fad7da;
+  border-radius: 2%;
+  padding: 10px; }
+  .postulate .btn {
+    background-color: #d3a7ab; }
+
 * {
   margin: 0;
   padding: 0; }
   * header .navbar-brand img {
-    height: 12vh; }
+    height: 12vh;
+    width: 30vw;
+    object-fit: contain; }
   * header .nav-item {
     padding-right: 20px;
     font-family: gatwick; }
-    * header .nav-item nav-link {
+    * header .nav-item .nav-link {
       border-bottom: 1px solid grey; }
   * main {
     background-color: #fceff5; }
@@ -33,24 +55,3 @@
       padding: 20px; }
   * footer {
     background-color: #fad7da; }
-
-.card {
-  margin: 15px;
-  border-radius: 5%;
-  border: 2px solid #fad7da; }
-  .card img {
-    height: 40vh;
-    object-fit: cover;
-    border-radius: 100%;
-    border: 1px solid #fad7da; }
-  .card .card-title {
-    border-bottom: 1px solid grey; }
-
-.postulate {
-  margin: 20px 20% 20px 20%;
-  border: 2px solid #fad7da;
-  border-radius: 2%;
-  padding: 10px; }
-
-.btn {
-  background-color: #d3a7ab; }
