--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,6 +1,8 @@
-@import url(./_fonts.scss);
-@import url(./_productos.scss);
-@import url(./_empleo.scss);
+@import "./fonts";
+@import "./partials/productos";
+@import "./partials/empleo";
+@import "./variables";
+
 * {
     margin: 0;
     padding: 0;
@@ -8,24 +10,26 @@
         .navbar-brand {
             img {
             height: 12vh;
+            width: 30vw;
+            object-fit:contain;
             }
         }
         .nav-item{
             padding-right: 20px;
             font-family: gatwick;
-            nav-link{
+            .nav-link{
                 border-bottom: 1px solid grey;
             }
-        }    
+        }
     }
     main{
-        background-color: #fceff5;
+        background-color: $color-principal;
         .separador{
             h3{
                 text-align: center;
                 padding: 15px;
                 border: 1px solid darkgrey;
-                background-color:#fceff5;
+                background-color:$color-principal;
             }
         }
         .carousel-item{
@@ -48,8 +52,7 @@
         }
     }
     footer{
-        background-color: #fad7da;
+        background-color: $color-header;
     }
-
 }
 
