--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @font-face {
   font-family: gatwick;
   src: url(../assets/Gatwick/Gatwick-Bold.otf); }
@@ -21,6 +22,31 @@
   padding: 10px; }
   .postulate .btn {
     background-color: #d3a7ab; }
+
+.pedidos {
+  height: 100vh;
+  border: 1px solid black; }
+  .pedidos .row {
+    border: 1px solid black; }
+  .pedidos .clasicas {
+    height: 20vh; }
+  .pedidos .diseño {
+    height: 20vh; }
+  .pedidos .galletitas {
+    height: 20vh; }
+  .pedidos .alt {
+    height: 45px; }
+
+.padd {
+  padding: 20px; }
+
+.nosotros .nosotros--texto {
+  font-size: 1rem;
+  padding-top: 30%; }
+
+.nosotros img {
+  padding: 30px;
+  width: 80%; }
 
 * {
   margin: 0;
