--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,9 +1,14 @@
 @import "./fonts";
 @import "./partials/productos";
 @import "./partials/empleo";
+@import "./partials/pedidos";
+@import "./partials/nosotros";
 @import "./variables";
 
-* {
+* { 
+    // .fuente{
+    //     font-family: gatwick;
+    // }
     margin: 0;
     padding: 0;
     header{
