--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @font-face {
   font-family: gatwick;
   src: url(../assets/Gatwick/Gatwick-Bold.otf); }
@@ -24,25 +23,18 @@
     background-color: #d3a7ab; }
 
 .pedidos {
-  height: 100vh;
-  border: 1px solid black; }
+  height: 100%;
+  border: 1px solid #d3a7ab; }
   .pedidos .row {
-    border: 1px solid black; }
-  .pedidos .clasicas {
-    height: 20vh; }
-  .pedidos .diseño {
-    height: 20vh; }
-  .pedidos .galletitas {
-    height: 20vh; }
+    border: 1px solid #d3a7ab; }
   .pedidos .alt {
-    height: 45px; }
+    height: 50px; }
 
 .padd {
   padding: 20px; }
 
 .nosotros .nosotros--texto {
-  font-size: 1rem;
-  padding-top: 30%; }
+  font-size: 1rem; }
 
 .nosotros img {
   padding: 30px;
@@ -73,11 +65,19 @@
         height: 84vh;
         object-fit: cover;
         object-position: center; }
-    * main .contactos img {
-      padding: 20px;
-      height: 125px;
-      height: 125px; }
-    * main .contactos iframe {
-      padding: 20px; }
+    * main .contactos {
+      border-top: 1px solid #fad7da; }
+      * main .contactos img {
+        padding: 20px;
+        height: 125px;
+        height: 125px; }
+      * main .contactos iframe {
+        padding: 20px; }
+      * main .contactos .redes {
+        border-right: 1px solid #fad7da; }
+    * main .principal img {
+      width: 250px;
+      height: 250px;
+      border-radius: 100%; }
   * footer {
     background-color: #fad7da; }
