--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -6,9 +6,6 @@
 @import "./variables";
 
 * { 
-    // .fuente{
-    //     font-family: gatwick;
-    // }
     margin: 0;
     padding: 0;
     header{
@@ -46,6 +43,7 @@
             }
         }
         .contactos{
+            border-top: 1px solid $color-header;
             img{
                 padding: 20px;
                 height: 125px;
@@ -53,6 +51,17 @@
             }
             iframe{
                 padding: 20px;
+            }
+            .redes{
+                border-right: 1px solid $color-header;
+            }
+        }
+        .principal{
+            
+            img{
+                width: 250px;
+                height: 250px; 
+                border-radius: 100%;
             }
         }
     }
