--- a/scss/partials/nosotros.scss
+++ b/scss/partials/nosotros.scss
@@ -5,7 +5,15 @@
     }
     img{
         padding: 30px;
-        width: 80%;
+        @include size(500px,500px);
+        border-radius: 100%;
+        border-color: 1px solid $color-header;
+        margin: 30px;
+        
     }
-
 }
+@media (max-width: 600px) {
+    .nosotros img{
+        @include size(250px,250px);
+    }
+} 
