--- a/css/styles.css
+++ b/css/styles.css
@@ -7,12 +7,18 @@
   border-radius: 5%;
   border: 2px solid #fad7da; }
   .card img {
-    height: 40vh;
+    height: 30vh;
+    width: 30vh;
     object-fit: cover;
     border-radius: 100%;
     border: 1px solid #fad7da; }
   .card .card-title {
     border-bottom: 1px solid grey; }
+
+@media (max-width: 1200px) {
+  .card img {
+    height: 20vh;
+    width: 20vh; } }
 
 .postulate {
   margin: 20px 20% 20px 20%;
@@ -75,14 +81,22 @@
         object-position: center; }
     * main .contactos {
       border-top: 1px solid #fad7da; }
-      * main .contactos img {
-        padding: 20px;
-        height: 125px;
-        height: 125px; }
-      * main .contactos iframe {
-        padding: 20px; }
       * main .contactos .redes {
         border-right: 1px solid #fad7da; }
+        * main .contactos .redes img {
+          padding: 20px;
+          height: 125px;
+          height: 125px; }
+        * main .contactos .redes p {
+          background-color: #fad7da;
+          font-weight: bold;
+          font-size: 1.2rem; }
+      * main .contactos .mapa iframe {
+        padding-bottom: 10px; }
+      * main .contactos .mapa p {
+        background-color: #fad7da;
+        font-weight: bold;
+        font-size: 1.2rem; }
     * main .principal img {
       width: 250px;
       height: 250px;
