--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -25,6 +25,10 @@
         }
     }
     main{
+        .link{
+            text-decoration: none;
+            
+        }
         background-color: $color-principal;
         .separador{
             h3{
