--- a/scss/partials/_pedidos.scss
+++ b/scss/partials/_pedidos.scss
@@ -1,26 +1,12 @@
+@import "../variables";
 .pedidos{
     height: 100%;
     border:  1px solid $color-boton;
     .row{
         border: 1px solid $color-boton;
-
     }
-    // .clasicas{
-    //     height: 0%;
-    // }
-    
-    // .diseño{
-    //     height: 0%;
-    // }
-    // .galletitas{
-    //     height: 0%;
-    // }
     .alt{
         height: 50px;
     }
-}
-
-.padd{
-    padding: 20px;
 }
 
