--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,6 +5,15 @@ $color-boton:#d3a7ab;
     height: $h;
     width: $w;
 }
+
 .padd{
     padding: 20px;
+}
+
+.zoom {
+    transition: transform .2s; 
+}
+ 
+.zoom:hover {
+    transform: scale(1.1); 
 }
