--- a/scss/partials/_productos.scss
+++ b/scss/partials/_productos.scss
@@ -12,6 +12,9 @@
     .card-title{
         border-bottom: 1px solid grey;
     }
+    #btn3 #btn2 #btn1{
+        padding-bottom: 5px;
+    }
 }
 @media (max-width: 1200px){ 
     .card{
